tests/rosetta/out/Java/animate-a-pendulum.error
javac error: exit status 1
/tmp/TestMochiToJavaanimate-a-pendulum1215656394/001/AnimateAPendulum.java:47: error: incompatible types: double cannot be converted to String
        int pos = Integer.parseInt((10.000000 * sinApprox(phi) + 0.500000));
                                                               ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
